feat: implemented layout component for sb_app and minor keyevents for sb_app

--- a/storybook_yew_app/index.html
+++ b/storybook_yew_app/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>StoryBook Yew App</title>
+		<link
+			data-trunk
+			data-inline
+			rel="tailwind-css"
+			href="../styles/input.css"
+		/>
 	</head>
 	<body></body>
 </html>
