--- a/web_yew_app/index.html
+++ b/web_yew_app/index.html
@@ -1,8 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Yew App</title>
-    </head>
-    <body></body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Yew App</title>
+		<link
+			data-trunk
+			data-inline
+			rel="tailwind-css"
+			href="../styles/input.css"
+		/>
+	</head>
+	<body></body>
 </html>
